--- a/index.html
+++ b/index.html
@@ -412,5 +412,6 @@ input, select {
     document.getElementById("prev-move").addEventListener("click", () => navigateMoves("prev"));
     document.getElementById("next-move").addEventListener("click", () => navigateMoves("next"));
 });
+    </script>
 </body>
 </html>
