--- a/index.html
+++ b/index.html
@@ -354,6 +354,68 @@
         function play() { 
             game.reset();
             board.position('start');
+            function onDragStart(source, piece, position, orientation) {
+        if (game.game_over()) return false;
+        if (piece.search(/^b/) !== -1) return false;
+    }
+
+    function makeRandomMove() {
+        if (game.game_over()) return; // Stop if game is over
+
+        var possibleMoves = game.moves();
+        if (possibleMoves.length === 0) return;
+
+        var randomIdx = Math.floor(Math.random() * possibleMoves.length);
+        game.move(possibleMoves[randomIdx]);
+        board.position(game.fen());
+
+        checkGameStatus();  // ✅ Check after AI move
+    }
+
+    function onDrop(source, target) {
+        var move = game.move({ from: source, to: target, promotion: 'q' });
+
+        if (move === null) return 'snapback';
+
+        checkGameStatus();  // ✅ Check after player move
+
+        if (!game.game_over()) {
+            window.setTimeout(makeRandomMove, 250);
+        }
+    }
+
+    function onSnapEnd() {
+        board.position(game.fen());
+    }
+
+    function checkGameStatus() {
+        const statusElement = document.getElementById("gameStatus");
+
+        if (game.in_checkmate()) {
+            let winner = game.turn() === 'w' ? 'Black' : 'White';
+            statusElement.innerText = `Checkmate! ${winner} Wins!`;
+        } else if (game.in_draw()) {
+            statusElement.innerText = "It's a Draw!";
+        } else {
+            statusElement.innerText = ""; // Clear status if the game continues
+        }
+    }
+
+    var config = {
+        draggable: true,
+        position: 'start',
+        pieceTheme: 'https://chessboardjs.com/img/chesspieces/wikipedia/{piece}.png',
+        onDragStart: onDragStart,
+        onDrop: onDrop,
+        onSnapEnd: onSnapEnd
+    };
+    board = Chessboard('board', config);
+
+    document.getElementById("restartBtn").addEventListener("click", () => {
+        game.reset();
+        board.position('start');
+        document.getElementById("gameStatus").innerText = ""; // Clear status message
+    });
             updateMoveHistory();
         }
 
