--- a/index.html
+++ b/index.html
@@ -26,14 +26,32 @@
             margin-bottom: 10px;
         }
 
+        #board-container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 20px;
+            margin: 20px auto;
+            max-width: 800px;
+        }
+
         #board {
             width: 400px;
             height: 400px;
-            margin: 20px auto;
             border-radius: 12px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             background-color: #fff;
             padding: 10px;
+        }
+
+        #move-history {
+            width: 200px;
+            padding: 15px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            max-height: 400px;
+            overflow-y: auto;
         }
 
         button {
@@ -89,21 +107,20 @@
             display: inline-block;
         }
 
-        #move-history {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            display: inline-block;
-            max-height: 200px;
-            overflow-y: auto;
-        }
-
         @media (max-width: 600px) {
+            #board-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
             #board {
                 width: 300px;
                 height: 300px;
+            }
+
+            #move-history {
+                width: 100%;
+                max-height: 200px;
             }
 
             button {
@@ -119,7 +136,13 @@
 </head>
 <body>
     <h2>Chess AI</h2>
-    <div id="board"></div>
+    <div id="board-container">
+        <div id="board"></div>
+        <div id="move-history">
+            <h3>Move History</h3>
+            <ul id="move-list"></ul>
+        </div>
+    </div>
     <button id="gamestartBtn">Play With A Computer</button>
     <p id="gameStatus" style="font-size: 18px; font-weight: bold; color: red;"></p>
     <button id="restartBtn">Restart Game</button>
@@ -138,10 +161,7 @@
         </select>
         <button id="analyzeGame">Analyze Game</button>
     </div>
-    <div id="move-history">
-        <h3>Move History</h3>
-        <ul id="move-list"></ul>
-    </div>
+
 
     <script>
         let board, game, moves, currentMoveIndex;
